--- a/src/utils/locales/uk/translationUK.json
+++ b/src/utils/locales/uk/translationUK.json
@@ -32,7 +32,41 @@
         "new-title": "Нова Дошка",
         "new-icon": "Іконки",
         "new-bg": "Фон",
-        "new-placeholder": "Заголовок"
-    }
+        "new-placeholder": "Заголовок",
+        "edit-title": "Редагувати дошку",
+        "cr-brd-btn": "Створити",
+        "edt-brd-btn": "Змінити",
+
+        "card-add": "Додати картку",
+        "edt-card": "Редагувати картку",
+        "lbl-color": "Колір мітки",
+        "add-crd-btn": "Додати",
+        "edt-crd-btn": "Змінити",
+        "crd-descr": "Опис",
+
+        "clm-add": "Додати колонку",
+        "clm-edt": "Редагувати колонку",
+
+        "filters": "Фільтри",
+        "all-btn": "Показати всі",
+
+        "help": "Потрібна допомога",
+        "help-com": "Коментар",
+        "send-btn": "Надіслати",
+
+        "edt-prf": "Редагувати профіль",
+        "name-prf": "Введіть своє ім'я",
+        "mail-prf": "Введіть свій email",
+        "psw-prf": "Створіть пароль",
+
+        "del-text": "Ви впевнені що хочете видалити",
+        "cnf-btn": "Видалити",
+        "cnl-btn": "Назад",
+        "logout": "Ви впевнені що хочете вийти?",
+        "cnf-logout": "Вийти"
+    },
+    "dark": "Темна",
+    "light": "Світла",
+    "violet": "Синя" 
     
 }
